# chronocode

./: .gitignore  Cargo.toml  README.md  ai_session.json  chronocode  chronocode-viewer.html  chronocode.py  demo.sh  filewatcher  filewatcher.py  foo.json  publish.sh  pyproject.toml  replay.html  requirements.txt  viewer-step.json  viewer-step2.json  viewer.html
.github/workflows/: ci.yml  publish.yml  release.yml
demo_project/: README.md
src/: app.rs  cli.rs  git.rs  gitignore.rs  main.rs  recording.rs  renderer.rs  scanner.rs  server.rs  state.rs  statistics.rs  watcher.rs
