[project]
name = "filewatcher"
version = "1.0.0"
description = "A command-line tool to watch directory structures and file changes in real-time"
authors = [
    {name = "User", email = "user@example.com"}
]
dependencies = [
    "watchdog>=3.0.0"
]
requires-python = ">=3.8"

[project.scripts]
filewatcher = "filewatcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
