[project]
name = "chronocode"
version = "1.0.0"
description = "Record and replay file system changes - watch AI agents build projects in real-time"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "iggy", email = "iggy@example.com"}
]
keywords = ["file-watcher", "recording", "replay", "development", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "watchdog>=3.0.0"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/dylangarcia/chronocode"
Repository = "https://github.com/dylangarcia/chronocode"
Issues = "https://github.com/dylangarcia/chronocode/issues"

[project.scripts]
chronocode = "chronocode:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = [
    "chronocode.py",
    "replay.html",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel]
only-include = [
    "chronocode.py",
    "replay.html",
]
